Burger menu alignment fixed for small devices

--- a/Components/Events.css
+++ b/Components/Events.css
@@ -237,7 +237,7 @@ button:hover {
   }
 
   button {
-    width: 90%;
+    
     text-align: center;
   }
 }
